--- a/client/app/common/hero/hero.html
+++ b/client/app/common/hero/hero.html
@@ -1,5 +1,9 @@
-<section class="hero">
-  <h1>This is the NG6 starter</h1>
-  <span>omg is it working</span>
-  <h3>You can find me inside {{ $ctrl.name }}.html</h3>
-</section>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Bootstrap Tutorial</h1> 
+    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+    responsive, mobile-first projects on the web.</p> 
+  </div>
+  <p>This is some text.</p> 
+  <p>This is another text.</p> 
+</div>
