--- a/client/app/common/navbar/navbar.html
+++ b/client/app/common/navbar/navbar.html
@@ -1,8 +1,7 @@
-<nav class="navbar">
-  <div class="logo">
-    <h1><a ui-sref="home">{{ $ctrl.name }}</a></h1>
-  </div>
-  <div class="nav-links">
-    <span><a ui-sref="about">about</a></span>
-  </div>
+<nav class="nav nav-tabs">
+  <ul class="nav nav-tabs">
+    <li class="active"><a ui-sref="home">Главная</a></li>
+    <li><a ui-sref="about">Профиль</a></li>
+  </ul>  
 </nav>
+
