--- a/client/app/common/navbar/navbar.html
+++ b/client/app/common/navbar/navbar.html
@@ -1,7 +1,6 @@
 <nav class="nav nav-tabs">
   <ul class="nav nav-tabs">
-    <li class="active"><a ui-sref="home">Главная</a></li>
-    <li><a ui-sref="about">Профиль</a></li>
-  </ul>  
+    <li ui-sref-active="active"><a ui-sref="home">Главная</a></li>
+    <li ui-sref-active="active"><a ui-sref="about">Профиль</a></li>
+  </ul>
 </nav>
-
