--- a/client/app/common/hero/hero.html
+++ b/client/app/common/hero/hero.html
@@ -1,9 +1,6 @@
 <div class="container">
   <div class="jumbotron">
-    <h1>Bootstrap Tutorial</h1> 
-    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
-    responsive, mobile-first projects on the web.</p> 
+    <h1>Tada! Here is first angular app</h1>
+    <p>Here you can enter the movie and rank it</p>
   </div>
-  <p>This is some text.</p> 
-  <p>This is another text.</p> 
 </div>
