addet myBytton that takes difficulty via $http

--- a/client/app/common/hero/hero.html
+++ b/client/app/common/hero/hero.html
@@ -2,5 +2,6 @@
   <div class="jumbotron">
     <h1>Tada! Here is first angular app</h1>
     <p>Here you can enter the movie and rank it</p>
+    <my-button class="hero__my-btn"/>
   </div>
 </div>
