added my button

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="app"  ng-strict-di ng-cloak>
   <head>
     <meta charset="utf-8">
     <title>NG6-Starter by @AngularClass</title>
@@ -11,7 +11,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <base href="/">
   </head>
-  <body ng-app="app" ng-strict-di ng-cloak>
+  <body>
     <app>
       Loading...
     </app>
