--- a/client/app/common/navbar/navbar.html
+++ b/client/app/common/navbar/navbar.html
@@ -1,6 +1,25 @@
-<nav class="nav nav-tabs">
-  <ul class="nav nav-tabs">
-    <li ui-sref-active="active"><a ui-sref="home">Главная</a></li>
-    <li ui-sref-active="active"><a ui-sref="about">Профиль</a></li>
-  </ul>
+<nav class="navbar navbar-default" role="navigation">
+	<!-- Brand and toggle get grouped for better mobile display -->
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"
+    ng-click="$ctrl.toggleMenu()">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<a class="navbar-brand" ui-sref="home" href="/home">Owesome Site!</a>
+	</div>
+
+	<!-- Collect the nav links, forms, and other content for toggling -->
+	<div class="collapse navbar-collapse navbar-ex1-collapse"  ng-class="{in: $ctrl.isToggled}">
+		<ul class="nav navbar-nav">
+			<li ui-sref-active="active"><a ui-sref="home" href="/home">Home</a></li>
+			<li ui-sref-active="active"><a ui-sref="about" href="/about">About</a></li>
+		</ul>
+
+		<ul class="nav navbar-nav navbar-right">
+			<li><a ui-sref="login" href="/login">Login</a></li>
+		</ul>
+	</div><!-- /.navbar-collapse -->
 </nav>
