added movie details page. code cleaned

--- a/client/app/common/navbar/navbar.html
+++ b/client/app/common/navbar/navbar.html
@@ -14,8 +14,9 @@
 	<!-- Collect the nav links, forms, and other content for toggling -->
 	<div class="collapse navbar-collapse navbar-ex1-collapse"  ng-class="{in: $ctrl.isToggled}">
 		<ul class="nav navbar-nav">
-			<li ui-sref-active="active"><a ui-sref="home" href="/home">Home</a></li>
-			<li ui-sref-active="active"><a ui-sref="about" href="/about">About</a></li>
+			<li ui-sref-active="active"><a ui-sref="home" >Home</a></li>
+			<li ui-sref-active="active"><a ui-sref="movies" >Movies</a></li>
+			<li ui-sref-active="active"><a ui-sref="about" >About</a></li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
